--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   riverpod_annotation: ^2.3.5
   google_sign_in: ^6.2.1
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
